@@ -1,8 +1,12 @@
 btrbk-current
 
+  * MIGRATION
+    - If "rate_limit" is enabled, update ssh_filter_btrbk.sh on remote
+      source hosts, and make sure the "pv" command is available there.
   * Allow converting backup disks to source disks (close #114).
   * Add "backend btrfs-progs-sudo" configuration option (close #115).
   * Show aggregate "size" and "used" for "usage" action (close #119).
+  * Bugfix: rate limiting must be done after compression (close #134).
   * raw_target_encrypt: Always set "gpg --no-random-seed-file":
     prevents creation of "~/.gnupg/random_seed" with slight perfomance
     penalty.
